--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-toast": "^1.2.1",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.15",
     "framer-motion": "^10.16.1",
+    "lucide-react": "^0.446.0",
     "next": "13.4.15",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -21,6 +25,9 @@
     "react-dom": "18.2.0",
     "react-type-animation": "^3.1.0",
     "resend": "^1.0.0",
-    "tailwindcss": "3.3.3"
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
+    "toast": "^0.5.4"
   }
 }
